// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Level Of Access Component should render the UI correctly for HIPPA page for Basic 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <p
        class="body-1 body-1 text-center"
        style="display: block;"
      />
      <div
        class="flex flex-col w-[358px]"
      >
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <main>
          <div
            class="flex flex-col items-center teritary-color-1"
          >
            <div
              class="flex flex-row body-1 text-center"
            >
              You're changing access for:
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold"
              style="display: block;"
            >
              Chris
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <span>
              <b>
                Member Name :
              </b>
               
              Chris Hall
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div
              class="flex flex-row font-bold text-center"
            >
              Authorization Form:
               
              Basic
               Access
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                You are asking BlueCross BlueShield of Tennessee (BlueCross or BCBSTN), and the people and other companies who work with BlueCross, to give the person you have selected through your Member Portal account or BCBSTN mobile application, Basic Access to the selected Member's health information. Basic Access means that we can share basic health information we have about the Member anywhere in our company with this person. Any part of our company can share the information (including Member Portal, the BCBSTN mobile application, and Member Services) and we can share it in any way, including through phone, fax, and email. By clicking the "I Agree" button after reading this, you are electronically signing this authorization form.
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span>
                button after reading this, you are electronically signing this authorization form.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              What Information is Being Used or Shared
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                 
                This person will be able to have 
                Basic
                 Access to all the Member's health information. They will have access to private health details about the Member, including personal and contact information, health and medical details, insurance information, and social services the Member uses.
              </span>
              <span
                class="font-bold"
              />
              <span />
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              Reasons the Information is Being Used or Shared
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              We are sharing all of this information at your request, with your approval, and at your direction. The primary purpose of this authorization is to support the Member's or their Personal Representative's right to access and direct the sharing of the Member's health information. Other reasons include support for treatment, payment, and health care operations activities, including care coordination among the Member's care team and with family members, friends, and others involved in care.
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              Expiration
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              This authorization will remain in effect until one of the following events happen:
            </p>
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span>
                      You tell us in writing that you want to cancel it.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      Either:
                    </p>
                    <span>
                      (a) Three years from the date you click
                    </span>
                    <span
                      class="font-bold"
                    >
                       "I Agree" 
                    </span>
                    ,
                     
                    <span>
                      if the Member is at least 18 years old when you electronically sign this form, or
                    </span>
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      (b) When the Member turns 18 years old, if the Member is between the age of 13 and 17 years old when you electronically sign this form.
                    </p>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span>
                      We may cancel this authorization either in its entirety or with respect to certain persons as explained in the User Agreement for our Member Portal or BCBSTN mobile application, such as if we learn that account credentials have been misused 
                      .
                    </span>
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              Acknowledgments & Signature
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="body-1 font-bold text-center"
              >
                Signing this form is voluntary.
                 
              </span>
              <span>
                BlueCross will not condition treatment, payment, enrollment, or eligibility for benefits on whether you sign this form. By clicking
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span>
                you are electronically signing this form.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="body-1 font-bold text-center"
              >
                If you don't click "I Agree,"
                 
              </span>
              <span>
                we may not be able to give the person you have selected access to the Member Portal or BCBSTN mobile application for this Member or to the information.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="body-1  text-center"
              >
                If you click
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span
                class="body-1  text-center"
              >
                you are confirming all of the following:
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      You understand this form.
                    </span>
                    <span>
                      You have read this form, and you are giving us your permission to use and share the Member's health information as described in this form.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      You may cancel at any time.
                       
                    </span>
                    <span>
                      You may cancel the permission to use and share the Member's information by telling us in writing. Send your written cancellation to BlueCross BlueShield of Tennessee, Inc., 1 Cameron Hill Circle, Chattanooga, Tennessee 37402. We will honor your cancellation, except to the extent we have already acted in reliance on it.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      The Member's information may be shared again.
                       
                    </span>
                    <span>
                      If we share the Member's information (including SUD Records) with a person that is not subject to federal health privacy laws (like HIPAA or Part 2), they may reshare the Member's health information, and it may not be protected by federal privacy laws anymore.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      You may have a copy of this form.
                       
                    </span>
                    <span>
                      You have the right to receive a copy of this form after you sign it. Send us a request in writing at the address above if you did not keep a copy.
                    </span>
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              aria-checked="true"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              class="flex flex-col  "
              role="checkbox"
            >
              <div
                class="flex flex-row items-center"
                tabindex="0"
              >
                <input
                  aria-label=""
                  checked=""
                  class="checkbox  checked  "
                  id="checkbox-"
                  type="checkbox"
                />
                <label
                  class="ml-2 "
                  for="checkbox-"
                >
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <span
                      class="font-bold"
                    >
                      I Agree.
                    </span>
                    <span>
                      Clicking "I Agree" means that you have read, understand, and agree to this authorization. You are giving your permission for BlueCross to give
                       
                      this person
                       
                      <span
                        class="font-bold"
                      >
                        Basic
                         Access
                      </span>
                       
                      to 
                      the Member's
                       health information
                      .
                       
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
          </div>
        </main>
        <button
          aria-label="Save Permissions"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold active"
          type="button"
        >
          Save Permissions
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
        />
      </div>
      <a
        aria-label="Cancel"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Cancel
          </p>
        </button>
      </a>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for HIPPA page for full 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <p
        class="body-1 body-1 text-center"
        style="display: block;"
      />
      <div
        class="flex flex-col w-[358px]"
      >
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <main>
          <div
            class="flex flex-col items-center teritary-color-1"
          >
            <div
              class="flex flex-row body-1 text-center"
            >
              You're changing access for:
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold"
              style="display: block;"
            >
              Chris
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <span>
              <b>
                Member Name :
              </b>
               
              Chris Hall
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div
              class="flex flex-row font-bold text-center"
            >
              Authorization Form:
               
              Full
               Access
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                You are asking BlueCross BlueShield of Tennessee (BlueCross or BCBSTN), and the people and other companies who work with BlueCross, to give the person you have selected through your Member Portal account or BCBSTN mobile application Full Access to the selected Member's health information, including highly sensitive health information. Full Access means that we can share any information we have about the Member anywhere in our company with this person. Any part of our company can share the information (including Member Portal, the BCBSTN mobile application, and Member Services) and we can share it in any way, including through phone, fax, and email. By clicking the
              </span>
              <span>
                button after reading this, you are electronically signing this authorization form.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              What Information is Being Used or Shared
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                 
                This person will be able to have 
                Full
                 Access to all the Member's health information. They will have access to private health details about the Member, including personal and contact information, health and medical details, insurance information, and social services the Member uses.
                The information they will have access to may
                  reveal very sensitive health information about the Member,
                  including information about the Member's treatment or care for
                  reproductive health (including family planning, contraception,
                  miscarriage, abortion, maternity and infertility), substance
                  use disorders (including drugs and alcohol), mental or
                  behavioral health disorders, communicable diseases (including
                  HIV/AIDS and sexually transmitted diseases/infections
                  (STDs/STIs)), developmental or intellectual disabilities,
                  genetic disorders (including genetic testing for such
                  disorders and genetic history), abuse (including sexual,
                  physical or mental), brain or other cognitive disorders, or
                  other sensitive information. By clicking
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span>
                 you are specifically giving us permission to share this very
                  sensitive health information with the person you have chosen
                  through the Member Portal account or BCBSTN mobile
                  application.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              Reasons the Information is Being Used or Shared
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              We are sharing all of this information at your request, with your approval, and at your direction. The primary purpose of this authorization is to support the Member's or their Personal Representative's right to access and direct the sharing of the Member's health information. Other reasons include support for treatment, payment, and health care operations activities, including care coordination among the Member's care team and with family members, friends, and others involved in care.
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold"
              style="display: block;"
            >
              Special Information about SUD Records
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              If the Member's health information includes substance use disorder (SUD) records that might be protected by a federal law found at 42 U.S.C. § 290dd-2 and 42 C.F.R. Part 2 (called Part 2), special rules apply. Specifically:
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    SUD records disclosed for treatment, payment, and health care operations purposes with anyone regulated by the Health Information Portability and Accountability Act and its implementing regulations (called HIPAA), may be redisclosed by them for any purpose permitted by HIPAA, except that SUD records cannot be used in civil, criminal, administrative, or legislative proceedings against the Member.
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Due to current technical and data segmentation infeasibility issues, we cannot separate specially protected SUD records from other information. That means we follow the more stringent Part 2 rules when it comes to our Member Portal and BCBSTN mobile application.
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    42 CFR Part 2 prohibits unauthorized use or disclosure of these records.
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              Expiration
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              This authorization will remain in effect until one of the following events happen:
            </p>
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span>
                      You tell us in writing that you want to cancel it.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      Either:
                    </p>
                    <span>
                      (a) Three years from the date you click
                    </span>
                    <span
                      class="font-bold"
                    >
                       "I Agree" 
                    </span>
                    ,
                     
                    <span>
                      if the Member is at least 18 years old when you electronically sign this form, or
                    </span>
                    <p
                      class="body-1"
                      style="display: block;"
                    >
                      (b) When the Member turns 18 years old, if the Member is between the age of 13 and 17 years old when you electronically sign this form.
                    </p>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span>
                      We may cancel this authorization either in its entirety or with respect to certain persons as explained in the User Agreement for our Member Portal or BCBSTN mobile application, such as if we learn that account credentials have been misused 
                      .
                    </span>
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1 body-1 font-bold text-center"
              style="display: block;"
            >
              Acknowledgments & Signature
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="body-1 font-bold text-center"
              >
                Signing this form is voluntary.
                 
              </span>
              <span>
                BlueCross will not condition treatment, payment, enrollment, or eligibility for benefits on whether you sign this form. By clicking
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span>
                you are electronically signing this form.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="body-1 font-bold text-center"
              >
                If you don't click "I Agree,"
                 
              </span>
              <span>
                we may not be able to give the person you have selected access to the Member Portal or BCBSTN mobile application for this Member or to the information.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="body-1  text-center"
              >
                If you click
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span
                class="body-1  text-center"
              >
                you are confirming all of the following:
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      You understand this form.
                    </span>
                    <span>
                      You have read this form, and you are giving us your permission to use and share the Member's health information as described in this form.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      You may cancel at any time.
                       
                    </span>
                    <span>
                      You may cancel the permission to use and share the Member's information by telling us in writing. Send your written cancellation to BlueCross BlueShield of Tennessee, Inc., 1 Cameron Hill Circle, Chattanooga, Tennessee 37402. We will honor your cancellation, except to the extent we have already acted in reliance on it.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      The Member's information may be shared again.
                       
                    </span>
                    <span>
                      If we share the Member's information (including SUD Records) with a person that is not subject to federal health privacy laws (like HIPAA or Part 2), they may reshare the Member's health information, and it may not be protected by federal privacy laws anymore.
                    </span>
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    <span
                      class="font-bold"
                    >
                      You may have a copy of this form.
                       
                    </span>
                    <span>
                      You have the right to receive a copy of this form after you sign it. Send us a request in writing at the address above if you did not keep a copy.
                    </span>
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              aria-checked="true"
              aria-disabled="false"
              aria-invalid="false"
              aria-required="false"
              class="flex flex-col  "
              role="checkbox"
            >
              <div
                class="flex flex-row items-center"
                tabindex="0"
              >
                <input
                  aria-label=""
                  checked=""
                  class="checkbox  checked  "
                  id="checkbox-"
                  type="checkbox"
                />
                <label
                  class="ml-2 "
                  for="checkbox-"
                >
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <span
                      class="font-bold"
                    >
                      I Agree.
                    </span>
                    <span>
                      Clicking "I Agree" means that you have read, understand, and agree to this authorization. You are giving your permission for BlueCross to give
                       
                      this person
                       
                      <span
                        class="font-bold"
                      >
                        Full
                         Access
                      </span>
                       
                      to 
                      the Member's
                       health information
                      ,
                       
                       including the Member's highly sensitive health information.
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
          </div>
        </main>
        <button
          aria-label="Save Permissions"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold active"
          type="button"
        >
          Save Permissions
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
        />
      </div>
      <a
        aria-label="Cancel"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Cancel
          </p>
        </button>
      </a>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for Success page 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <img
        alt="success"
        class="size-[80px]"
        data-nimg="1"
        decoding="async"
        height="40"
        loading="lazy"
        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
        style="color: transparent;"
        width="40"
      />
      <span
        style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
      />
      <h1
        class="title-1 title-2"
      >
        Level Of Access Saved
      </h1>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <div
        class="flex flex-col w-[358px]"
      >
        <div
          class="flex flex-col items-center"
        >
          <p
            class="body-1 text-center"
            style="display: block;"
          >
            The Level of access to your account information has been updated for:
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 font-bold"
            style="display: block;"
          >
            Chris
          </p>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <button
          aria-label="Done"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null undefined"
          type="button"
        >
          Done
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for subscriber 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <div
        class="flex flex-col items-center  w-[358px]"
      >
        <div
          class="flex flex-col"
        >
          <p
            class="body-1 text-center"
            style="display: block;"
          >
            You’re changing access for:
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 text-center font-bold"
            style="display: block;"
          >
            Chris
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
          />
          <div
            class="flex flex-col"
          >
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Full Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Full Sharing
                </p>
                <p>
                  They’ll see documents and claims, even those with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Basic Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Basic Sharing
                </p>
                <p>
                  They won’t be able to see documents or claims with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <a
                  class="link font-bold"
                  href="/member/support"
                >
                  Contact us
                </a>
              </span>
              <span>
                 to remove the subscriber’s access.
              </span>
            </span>
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <div
          class="mb-8"
        >
          <p
            class="body-1 body-2"
            style="display: block;"
          >
            Disclaimer: BlueCross BlueShield of Tennessee is not responsible for your personal representative or any third parties authorized by you or your personal representative to hae access to your health information. BlueCross BlueShield of Tennessee does not warrant that the information provided will be accurate, timely or complete.
          </p>
        </div>
        <button
          aria-label="Next"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold primary-color"
          type="button"
        >
          Next
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          type="button"
        >
          <p
            class="link !no-underline"
            style="display: block;"
          >
            Cancel
          </p>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for subscriber 2`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <div
        class="flex flex-col items-center  w-[358px]"
      >
        <div
          class="flex flex-col"
        >
          <p
            class="body-1 text-center"
            style="display: block;"
          >
            You’re changing access for:
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 text-center font-bold"
            style="display: block;"
          >
            Chris
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
          />
          <div
            class="flex flex-col"
          >
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Full Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Full Sharing
                </p>
                <p>
                  They’ll see documents and claims, even those with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Basic Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Basic Sharing
                </p>
                <p>
                  They won’t be able to see documents or claims with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="None"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  None
                </p>
                <p>
                  They won’t see any documents and claims.
                </p>
              </div>
            </div>
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <div
          class="mb-8"
        >
          <p
            class="body-1 body-2"
            style="display: block;"
          >
            Disclaimer: BlueCross BlueShield of Tennessee is not responsible for your personal representative or any third parties authorized by you or your personal representative to hae access to your health information. BlueCross BlueShield of Tennessee does not warrant that the information provided will be accurate, timely or complete.
          </p>
        </div>
        <button
          aria-label="Next"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold primary-color"
          type="button"
        >
          Next
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          type="button"
        >
          <p
            class="link !no-underline"
            style="display: block;"
          >
            Cancel
          </p>
        </button>
      </div>
    </div>
  </div>
</body>
`;
